--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-splash-screen": "^3.3.0",
+    "react-navigation-stack": "^2.10.4",
     "react-spinners": "^0.11.0"
   },
   "devDependencies": {
